2007-08-22  Lapo Calamandrei <calamandrei@gmail.com>

	* {16x16,22x22}/categories/preferences-desktop.* : redone to match
		bigger sizes.

2007-08-21  Lapo Calamandrei <calamandrei@gmail.com>

	* */actions/edit-select-all.* : cursor tweaks.
	* 22x22/actions/document-save* : redid in gimp to have better
		rendering.
	* */apps/preferences-desktop-accessibility.* : less evident
		lighting.

2007-08-20  Lapo Calamandrei <calamandrei@gmail.com>

	* 16x16/actions/document-open-recent.* : tweaks.

2007-08-20  Jakub Steiner <jimmac@ximian.com>

	* emblem-shared: yes, bodyparts. Still the best metaphor though.
	* 32x32/devices/battery: minor shading fixes.

2007-08-19  Rodney Dawes  <dobey.pwns@gmail.com>

	* */categories/Makefile.am: Fix typo in applications-utilities

	Fixes #468035

2007-08-19  Lapo Calamandrei <calamandrei@gmail.com>
	
	* */actions/document-open-recent.* : refresh to use the same clock all
		over the place.
	* */actions/appointment-new.* : just the clock + the star (fixes
		#361158).
	* 16x16/categories/applications-utilites.* : missing size.
	* 16x16/emotes/face-monkey.* : tweaks.
	* {16x16,22x22}/status/network-wireless-encrypted.* : refresh.


2007-08-18  Lapo Calamandrei <calamandrei@gmail.com>

	* {22x22,32x32,scalable}/categories/applications-utilites.* : new icons.
	* {16x16,22x22}/status/audio-volume* : tweaks to improove visibility
		on dark backgrounds.

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* */emblems/Makefile.am:
	* */emblems/emblem-noread.*:
	* */emblems/emblem-nowrite.*:
	These were replaced with the new emblem-{readonly,unreadable} names

	Fixes #467814

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* */apps/Makefile.am:
	* */apps/gnome-searchtool.*:
	Remove this icon as it is replaced by system-search

	Fixes #370032

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* */stock/document/Makefile.am:
	* */stock/document/stock_attach.*:
	Remove this icon as it is replaced my mail-attachment

	Fixes #453611
