@@ -1,3 +1,7 @@
+2007-08-23  Lapo Calamandrei <calamandrei@gmail.com>
+
+	* */actions/document-send.* : new icon.
+
 2007-08-22  Lapo Calamandrei <calamandrei@gmail.com>
 
 	* {16x16,22x22}/categories/preferences-desktop.* : redone to match
